--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <p>That also leads to another question: why are they made that way?</p>
         <p>The answer is simple, it's because they're cute.</p>
         <h1>MEOW MEOW MEOW MEOW MEOW MEOW MEOW</h1>
-        <img src="cute_cat.jpg" alt="A very cute cat">
+        <img src="cute_cat.jpg" alt="A very cute cat" width="300">
     </body>
 </html>
