--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <h1>MEOW MEOW MEOW MEOW MEOW MEOW MEOW</h1>
         <img src="cute_cat.jpg" alt="A very cute cat" width="300">
         <h2>Doing things on your own terms</h2>
+        <h2>meow</h2>
     </body>
 </html>
